[package]
name = "singleflight"
version = "0.3.0"
authors = ["Garrett Squire <github@garrettsquire.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/gsquire/singleflight"
documentation = "https://docs.rs/singleflight"
description = "A Rust port of Go's singleflight package for call collapsing"
readme = "README.md"

[dependencies]
crossbeam-utils = "0.8"
hashbrown = "0.14"
parking_lot = "0.12"
